--- a/quiz.html
+++ b/quiz.html
@@ -5,14 +5,14 @@
   <title>Car Quiz</title>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; }
-    .option { cursor: pointer; padding: 10px; margin: 5px; border: 1px solid #333; border-radius: 5px; }
+    .option { cursor: pointer; padding: 10px; margin: 5px; border: 1px solid #333; border-radius: 5px; display: inline-block; }
     .option:hover { background-color: #eee; }
+    #timer { font-weight: bold; margin: 20px; }
   </style>
 </head>
 <body>
 
 <h1>Car Quiz</h1>
-
 <button id="start-btn">Start Game</button>
 
 <div id="timer"></div>
