--- a/quiz.html
+++ b/quiz.html
@@ -8,6 +8,7 @@
     .option { cursor: pointer; padding: 10px; margin: 5px; border: 1px solid #333; border-radius: 5px; display: inline-block; }
     .option:hover { background-color: #eee; }
     #timer { font-weight: bold; margin: 20px; }
+    img { max-width: 200px; margin: 10px 0; }
   </style>
 </head>
 <body>
